upload one chart for arushi

--- a/arushi.html
+++ b/arushi.html
@@ -79,6 +79,17 @@
                 }
               </script>
             </div>
+            <p class="align-center">
+              The visualizations below explore the performance of countries in
+            </p>
+            <div class="iframe-container">
+              <iframe
+                src="charts/arushi/final_plot.html"
+                width="1200"
+                height="1350"
+                frameborder="0"
+              ></iframe>
+            </div>
           </div>
         </div>
       </div>
